fix(build): add missing claude and env command files
Root cause: .gitignore pattern 'ccproxy' was matching cmd/ccproxy/ directory,
preventing command files from being committed to repository.

Changes:
- Fix .gitignore to use '/ccproxy' (root-only binary exclusion)
- Add cmd/ccproxy/commands/claude.go (ClaudeCmd function)
- Add cmd/ccproxy/commands/env.go (EnvCmd function)

This resolves the systematic CI failures:
- "undefined: commands.ClaudeCmd"
- "undefined: commands.EnvCmd"

The functions existed locally but were missing from the repository due to
overly broad gitignore pattern. CI build will now succeed.

--- a/.gitignore
+++ b/.gitignore
@@ -27,8 +27,8 @@ logs/
 
 .temp/x
 
-# Go binaries
-ccproxy
+# Go binaries (exclude from root only, not source directories)
+/ccproxy
 *.exe
 *.exe~
 *.dll
