--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -12,6 +12,10 @@ on:
 env:
   GO_VERSION: '1.23'
 
+permissions:
+  contents: write
+  packages: write
+
 jobs:
   check-changes:
     name: Check for relevant changes
@@ -60,6 +64,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Create pre-release tag
         id: create_tag
@@ -121,6 +126,8 @@ jobs:
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git tag -a ${{ steps.create_tag.outputs.tag_name }} -m "Pre-release ${{ steps.create_tag.outputs.tag_name }}"
           git push origin ${{ steps.create_tag.outputs.tag_name }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Create Release
         id: create_release
