fix: update CI workflows to handle missing test directories
- Update e2e-tests workflow to check if tests directory exists
- Fall back to running all tests with integration tag if no dedicated e2e directory
- Add golangci-lint installation step to CI workflow
- Use golangci-lint-action for proper installation in GitHub Actions environment

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,14 @@ jobs:
         make fmt
         git diff --exit-code || (echo "Code not properly formatted. Run 'make fmt'" && exit 1)
 
+    - name: Install golangci-lint
+      uses: golangci/golangci-lint-action@v6
+      with:
+        version: latest
+        skip-pkg-cache: true
+        skip-build-cache: true
+        args: --version
+
     - name: Lint
       run: make lint
 
