--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,16 +37,11 @@ jobs:
         make fmt
         git diff --exit-code || (echo "Code not properly formatted. Run 'make fmt'" && exit 1)
 
-    - name: Install golangci-lint
+    - name: Lint
       uses: golangci/golangci-lint-action@v6
       with:
-        version: latest
-        skip-pkg-cache: true
-        skip-build-cache: true
-        args: --version
-
-    - name: Lint
-      run: make lint
+        version: v1.61.0
+        args: --timeout=5m
 
     - name: Run tests
       run: make test
