fix: update deprecated GitHub Actions
- Update actions/upload-artifact from v3 to v4
- Fix gosec action reference from securecodewarrior to securego
- Update github/codeql-action/upload-sarif from v2 to v3
- Apply fixes to both ci.yml and dependency-update.yml

--- a/.github/workflows/dependency-update.yml
+++ b/.github/workflows/dependency-update.yml
@@ -123,7 +123,7 @@ jobs:
           govulncheck ./...
 
       - name: Run gosec
-        uses: securecodewarrior/github-action-gosec@master
+        uses: securego/gosec@master
         with:
           args: '-fmt sarif -out gosec-results.sarif ./...'
 
