--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -97,8 +97,11 @@ jobs:
       run: |
         VERSION_TYPE="${{ steps.check_version.outputs.version_type }}"
         
-        # Bump version
-        NEW_VERSION=$(./scripts/version.sh bump "$VERSION_TYPE")
+        # Bump version (capture stderr to see the messages)
+        ./scripts/version.sh bump "$VERSION_TYPE" 2>&1
+        
+        # Get the new version from the version file
+        NEW_VERSION=$(./scripts/version.sh current)
         
         echo "version=$NEW_VERSION" >> $GITHUB_OUTPUT
         echo "released=true" >> $GITHUB_OUTPUT
@@ -171,17 +174,6 @@ jobs:
         ### Windows
         Download the Windows executable from the assets below and add it to your PATH.
         
-        ### Docker
-        ```bash
-        docker pull ghcr.io/orchestre-dev/ccproxy:v${{ steps.version.outputs.version }}
-        ```
-        
-        ### Homebrew (macOS/Linux)
-        ```bash
-        brew tap orchestre-dev/tap
-        brew install ccproxy
-        ```
-        
         ## 🔒 Verification
         
         All release assets are signed and include SHA256 checksums for verification.
@@ -227,62 +219,3 @@ jobs:
         echo "" >> $GITHUB_STEP_SUMMARY
         echo "**Current version**: ${{ steps.check_version.outputs.current_version }}" >> $GITHUB_STEP_SUMMARY
 
-  docker:
-    name: Build and Push Docker Image
-    runs-on: ubuntu-latest
-    needs: auto-release
-    if: needs.auto-release.outputs.released == 'true'
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      with:
-        ref: main
-
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-
-    - name: Login to GitHub Container Registry
-      uses: docker/login-action@v3
-      with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Extract metadata
-      id: meta
-      uses: docker/metadata-action@v5
-      with:
-        images: ghcr.io/${{ github.repository }}
-        tags: |
-          type=semver,pattern={{version}},value=v${{ needs.auto-release.outputs.version }}
-          type=semver,pattern={{major}}.{{minor}},value=v${{ needs.auto-release.outputs.version }}
-          type=semver,pattern={{major}},value=v${{ needs.auto-release.outputs.version }}
-          type=raw,value=latest
-
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v5
-      with:
-        context: .
-        push: true
-        tags: ${{ steps.meta.outputs.tags }}
-        labels: ${{ steps.meta.outputs.labels }}
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
-        platforms: linux/amd64,linux/arm64
-        build-args: |
-          VERSION=${{ needs.auto-release.outputs.version }}
-
-  homebrew:
-    name: Update Homebrew Formula
-    runs-on: ubuntu-latest
-    needs: auto-release
-    if: needs.auto-release.outputs.released == 'true'
-    steps:
-    - name: Update Homebrew formula
-      uses: dawidd6/action-homebrew-bump-formula@v3
-      with:
-        token: ${{ secrets.HOMEBREW_TAP_TOKEN }}
-        formula: ccproxy
-        tap: orchestre-dev/homebrew-tap
-        tag: v${{ needs.auto-release.outputs.version }}
-      continue-on-error: true  # Don't fail the whole workflow if Homebrew update fails
