--- a/.github/workflows/cleanup.yml
+++ b/.github/workflows/cleanup.yml
@@ -218,69 +218,10 @@ jobs:
             
             console.log(`Total deleted workflow runs: ${totalDeleted}`);
 
-  cleanup-docker-images:
-    name: Cleanup Docker Images
-    runs-on: ubuntu-latest
-    if: github.event.inputs.cleanup_type == 'all' || github.event_name == 'schedule'
-    steps:
-      - name: Delete untagged container images
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const owner = context.repo.owner;
-            const packageName = context.repo.repo;
-            
-            try {
-              // Get all package versions
-              const versions = await github.rest.packages.getAllPackageVersionsForPackageOwnedByOrg({
-                package_type: 'container',
-                package_name: packageName,
-                org: owner,
-                per_page: 100
-              });
-              
-              let deletedCount = 0;
-              
-              for (const version of versions.data) {
-                // Delete untagged images older than 7 days
-                if (version.metadata && version.metadata.container && 
-                    version.metadata.container.tags.length === 0) {
-                  
-                  const versionDate = new Date(version.created_at);
-                  const cutoffDate = new Date();
-                  cutoffDate.setDate(cutoffDate.getDate() - 7);
-                  
-                  if (versionDate < cutoffDate) {
-                    try {
-                      await github.rest.packages.deletePackageVersionForOrg({
-                        package_type: 'container',
-                        package_name: packageName,
-                        org: owner,
-                        package_version_id: version.id
-                      });
-                      console.log(`Deleted untagged image: ${version.name}`);
-                      deletedCount++;
-                    } catch (error) {
-                      console.log(`Failed to delete image ${version.name}: ${error.message}`);
-                    }
-                  }
-                }
-              }
-              
-              console.log(`Deleted ${deletedCount} untagged container images`);
-              
-            } catch (error) {
-              if (error.status === 404) {
-                console.log('No container packages found or insufficient permissions');
-              } else {
-                console.log(`Error cleaning up container images: ${error.message}`);
-              }
-            }
-
   summary:
     name: Cleanup Summary
     runs-on: ubuntu-latest
-    needs: [cleanup-artifacts, cleanup-pre-releases, cleanup-workflow-runs, cleanup-docker-images]
+    needs: [cleanup-artifacts, cleanup-pre-releases, cleanup-workflow-runs]
     if: always()
     steps:
       - name: Create cleanup summary
@@ -293,6 +234,5 @@ jobs:
           echo "- Artifacts: ${{ needs.cleanup-artifacts.result || 'skipped' }}" >> $GITHUB_STEP_SUMMARY
           echo "- Pre-releases: ${{ needs.cleanup-pre-releases.result || 'skipped' }}" >> $GITHUB_STEP_SUMMARY
           echo "- Workflow runs: ${{ needs.cleanup-workflow-runs.result || 'skipped' }}" >> $GITHUB_STEP_SUMMARY
-          echo "- Docker images: ${{ needs.cleanup-docker-images.result || 'skipped' }}" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "### Next scheduled cleanup: $(date -d 'next sunday 02:00' -u)" >> $GITHUB_STEP_SUMMARY
