docs: Enhance SEO and fix VitePress deployment
- Added SEO-optimized titles emphasizing "AI proxy for Claude Code"
- Enhanced configuration documentation with clear explanations and examples
- Created VitePress configuration file to fix Cloudflare deployment
- Added comprehensive keywords throughout documentation
- Updated package.json with SEO-friendly descriptions
- Added summary section with key benefits and keywords
- Improved configuration guide with visual flow and real-world examples

--- a/docs/package.json
+++ b/docs/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ccproxy-docs",
   "version": "1.0.0",
-  "description": "Documentation for CCProxy",
+  "description": "Documentation for CCProxy - The AI Request Proxy for Claude Code | Multi-Provider LLM Gateway",
   "scripts": {
     "dev": "vitepress dev",
     "clean": "rm -rf .vitepress/dist",
