fix(ci): resolve YAML syntax error in docs workflow
- Fixed multi-line string template literal causing YAML parsing error on line 132
- Converted to single-line string with explicit \n characters
- Maintains same output formatting while avoiding YAML indentation issues

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -126,12 +126,7 @@ jobs:
               comment.body.includes('📚 Documentation Preview')
             );
             
-            const body = `📚 **Documentation Preview**
-            
-Your documentation changes are available for preview:
-🔗 ${deploymentUrl}
-
-This preview will be updated automatically with new commits.`;
+            const body = `📚 **Documentation Preview**\n\nYour documentation changes are available for preview:\n🔗 ${deploymentUrl}\n\nThis preview will be updated automatically with new commits.`;
             
             if (botComment) {
               // Update existing comment
