fix(ci): ensure docs workflow runs build instead of dev server
- Use explicit npx vitepress build command
- Add NODE_ENV=production to force production build
- Add extensive debugging output to diagnose issues
- Show current directory, environment variables, and build output
- Remove reliance on npm scripts to avoid any script confusion

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -61,22 +61,35 @@ jobs:
           fi
           
           # Clean any existing build
+          echo "Cleaning build directory..."
           rm -rf .vitepress/dist
           
+          # Show environment
+          echo "Current directory: $(pwd)"
+          echo "NODE_ENV: ${NODE_ENV}"
+          
           # Show VitePress version
+          echo "VitePress version:"
           npx vitepress --version || echo "VitePress version check failed"
           
-          # Build the documentation (not dev server!)
-          echo "Running: vitepress build"
-          npx vitepress build --base="$VITE_BASE" || (echo "Build failed" && exit 1)
+          # Build the documentation explicitly
+          echo "Starting build process..."
+          echo "Running command: npx vitepress build"
+          NODE_ENV=production npx vitepress build || (echo "Build failed with exit code $?" && exit 1)
           
           # Verify build output
+          echo "Checking build output..."
           if [ ! -d ".vitepress/dist" ]; then
-            echo "Error: Build output directory not found"
+            echo "Error: Build output directory .vitepress/dist not found"
+            echo "Contents of current directory:"
+            ls -la
+            echo "Contents of .vitepress directory:"
+            ls -la .vitepress/ || echo ".vitepress directory not found"
             exit 1
           fi
           
           echo "Build completed successfully"
+          echo "Build output contents:"
           ls -la .vitepress/dist
         env:
           GA_MEASUREMENT_ID: ${{ secrets.GA_MEASUREMENT_ID }}
