--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -68,14 +68,33 @@ jobs:
           echo "Current directory: $(pwd)"
           echo "NODE_ENV: ${NODE_ENV}"
           
-          # Show VitePress version
+          # Debug VitePress
           echo "VitePress version:"
           npx vitepress --version || echo "VitePress version check failed"
+          echo ""
+          echo "VitePress help:"
+          npx vitepress --help || echo "VitePress help failed"
+          echo ""
+          echo "Checking VitePress binary:"
+          which vitepress || echo "vitepress not in PATH"
+          ls -la ./node_modules/.bin/vitepress || echo "vitepress binary not found"
           
           # Build the documentation explicitly
           echo "Starting build process..."
-          echo "Running command: npx vitepress build"
-          NODE_ENV=production npx vitepress build || (echo "Build failed with exit code $?" && exit 1)
+          echo "Available npm scripts:"
+          npm run
+          echo ""
+          
+          # Try different approaches to ensure build runs
+          echo "Attempt 1: Using NODE_ENV and CI environment variables"
+          CI=true NODE_ENV=production npm run build || {
+            echo "npm run build failed, trying direct vitepress command"
+            echo "Attempt 2: Direct vitepress build command"
+            NODE_ENV=production npx vitepress build . || {
+              echo "Direct vitepress also failed"
+              exit 1
+            }
+          }
           
           # Verify build output
           echo "Checking build output..."
