docs: add environment example and CSP documentation

--- a/docs/.env.example
+++ b/docs/.env.example
@@ -1,10 +1,24 @@
 # Google Analytics Configuration
 # Copy this file to .env and add your Google Analytics Measurement ID
 
-# Google Analytics 4 Measurement ID
+# Google Analytics 4 Measurement ID (Build-time - for VitePress config)
 # Get your ID from https://analytics.google.com/
 # Format: G-XXXXXXXXXX
-GA_MEASUREMENT_ID=
+GA_MEASUREMENT_ID=G-XXXXXXXXXX
 
-# Example:
-# GA_MEASUREMENT_ID=G-ABC123DEF4
+# Google Analytics 4 Measurement ID (Client-side accessible)
+VITE_GA_MEASUREMENT_ID=G-XXXXXXXXXX
+
+# Client-side environment variables (prefix with VITE_)
+# These will be available in Vue components via import.meta.env
+VITE_APP_TITLE=CCProxy
+VITE_API_BASE_URL=https://api.ccproxy.orchestre.dev
+VITE_DOCS_VERSION=1.0.0
+
+# Newsletter Form Configuration
+# Formspree endpoint for newsletter signups
+VITE_NEWSLETTER_FORM_ENDPOINT=https://formspree.io/f/YOUR_FORM_ID
+
+# Example client-side usage:
+# const title = import.meta.env.VITE_APP_TITLE
+# const formEndpoint = import.meta.env.VITE_NEWSLETTER_FORM_ENDPOINT
