chore: update k8s deployment with human-readable env vars
- Replace indexed environment variables in Kubernetes deployment
- Use provider-specific variables (ANTHROPIC_API_KEY, OPENAI_API_KEY)
- Update comments to reflect new environment variable format

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -32,15 +32,11 @@ spec:
             secretKeyRef:
               name: ccproxy-secrets
               key: api-key
-        - name: CCPROXY_PROVIDERS_0_NAME
-          value: "anthropic"
-        - name: CCPROXY_PROVIDERS_0_API_KEY
+        - name: ANTHROPIC_API_KEY
           valueFrom:
             secretKeyRef:
               name: ccproxy-secrets
               key: anthropic-api-key
-        - name: CCPROXY_PROVIDERS_0_ENABLED
-          value: "true"
         resources:
           requests:
             memory: "512Mi"
